@@ -1,3 +1,6 @@
+10/13/2024
+	Added support for split pea/split pill lines
+
 10/1/2024
 	Added test case for full rank and parity party
 
